# ChangeLog for app-misc/japanese-vocabulary
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  21 Mar 2008; Jakub Moc <jakub@gentoo.org> japanese-vocabulary-0.6.ebuild:
  Fix pkg_postrm

  04 Dec 2007; Jakub Moc <jakub@gentoo.org> japanese-vocabulary-0.6.ebuild:
  Switch to EAPI-1 and slotted deps

  25 Nov 2007; Kyle Cavin (kcavin) <kyle.cavin@gmail.com>
  japanese-vocabulary-0.6.ebuild:
  corrected .pro filename in call to qmake

  28 Oct 2007; Charlie Shepherd <masterdriverz@gentoo.org>
  japanese-vocabulary-0.6.ebuild:
  Quote $ROOT.

  04 Aug 2007; Jakub Moc <jakub@gentoo.org> japanese-vocabulary-0.6.ebuild:
  use pkg_setup from qt4 eclass for built_with_use check

  04 Aug 2007; Jakub Moc <jakub@gentoo.org> japanese-vocabulary-0.6.ebuild:
  Use eqmake4 from qt4 eclass

  01 Jul 2007; Jakub Moc <jakub@gentoo.org> japanese-vocabulary-0.6.ebuild:
  Use full path to qmake, use ${ROOT} in pkg_postrm

  09 Apr 2007; Jakub Moc <jakub@gentoo.org> japanese-vocabulary-0.6.ebuild:
  Add pkg_postrm to clean-up after itself on unmerge

  21 Feb 2007; Tiziano Müller <dev-zero@gentoo.org>
  +japanese-vocabulary-0.6.ebuild, +metadata.xml:
  New ebuild for bug #166275
